Fixed to match the SDK.  Now using the spring framework configuration files